Fixed misaligned arrow for Koenig action bar
no issue
- fixed Koenig action bar arrow misalignement in dark mode

--- a/ghost/admin/app/styles/spirit/_koenig-dark.css
+++ b/ghost/admin/app/styles/spirit/_koenig-dark.css
@@ -19,7 +19,7 @@
 
 .kg-action-bar:before {
     position: absolute;
-    top: 40px;
+    top: 36px;
     left: calc(50% - 10px);
     width: 0;
     border-top: 10px solid var(--whitegrey);
